<resources>
    <string name="app_name">BMI Calculator App V2</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="enter_your_weight_kg">Enter your weight (kg):</string>
    <string name="enter_your_height_m">Enter your height (m):</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="bmi_category_appears_here">BMI category appears here.</string>
    <string name="calculate">Calculate</string>
    <string name="answer">..................</string>
    <string name="your_bmi2">Your BMI:</string>
</resources>